@@ -22,8 +22,6 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.fs.permission.FsPermission;
@@ -32,14 +30,14 @@ import org.apache.hadoop.hive.metastore.api.MetaException;
 import org.apache.hadoop.hive.metastore.api.NoSuchObjectException;
 import org.apache.hadoop.hive.ql.metadata.Hive;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
-import org.apache.hcatalog.data.Pair;
-import org.apache.pig.PigServer;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /** 
  * Utility methods for tests
  */
 public class HcatTestUtils {
-  private static final Log LOG = LogFactory.getLog(HcatTestUtils.class);
+  private static final Logger LOG = LoggerFactory.getLogger(HcatTestUtils.class);
 
   public static FsPermission perm007 = FsPermission.createImmutable((short) 0007); // -------rwx
   public static FsPermission perm070 = FsPermission.createImmutable((short) 0070); // ----rwx---
