@@ -63,10 +63,6 @@
           conf="common->master"/>
         <dependency org="commons-lang" name="commons-lang" rev="${commons-lang.version}"
           conf="common->master"/>
-        <dependency org="commons-logging" name="commons-logging"
-          rev="${commons-logging.version}" conf="common->master"/>
-        <dependency org="commons-logging" name="commons-logging-api"
-          rev="${commons-logging.version}" conf="common->master"/>
 
         <!-- hbase test dependencies -->
         <dependency org="com.github.stephenc.high-scale-lib" name="high-scale-lib" rev="${high-scale-lib.version}" conf="common->master" />
