@@ -17,9 +17,8 @@
  */
 package org.apache.hcatalog.hbase.snapshot.lock;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * Represents an ephemeral znode name which has an ordered sequence number
@@ -31,7 +30,7 @@ public class ZNodeName implements Comparable<ZNodeName> {
     private final String name;
     private String prefix;
     private int sequence = -1;
-    private static final Log LOG = LogFactory.getLog(ZNodeName.class);
+    private static final Logger LOG = LoggerFactory.getLogger(ZNodeName.class);
 
     public ZNodeName(String name) {
         if (name == null) {
